<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/Details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/pdetails"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/PersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/EmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:ems="10"
            android:hint="@string/phoneNo"
            android:inputType="phone"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/AadharNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:ems="10"
            android:hint="@string/aadhar"
            android:inputType="number"
            android:maxLength="12"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/PanNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:ems="10"
            android:hint="@string/pan"
            android:inputType="textPersonName"
            android:maxLength="10"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/Bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            android:text="@string/bdetails"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/Bname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="360dp"
            android:ems="10"
            android:hint="@string/Bname"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/Bbranch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:ems="10"
            android:hint="@string/branch"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/AccHoldr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="440dp"
            android:ems="10"
            android:hint="@string/holdr"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/AccNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="480dp"
            android:ems="10"
            android:hint="@string/AccNo"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/IFSC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="520dp"
            android:ems="10"
            android:hint="@string/ifsc"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/upi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="560dp"
            android:ems="10"
            android:hint="@string/upi"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/agreedet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="620dp"
            android:text="@string/agreement_details"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/brokerage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="650dp"
            android:ems="10"
            android:hint="@string/broker_age"
            android:inputType="number"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/periodofagr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="700dp"
            android:ems="10"
            android:hint="@string/period_of_agreement"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/AmountRecieved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="750dp"
            android:ems="10"
            android:hint="@string/amount_recieved"
            android:inputType="numberDecimal"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/Amountrecinwords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="800dp"
            android:ems="10"
            android:hint="@string/amount_recieved_in_words"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/accopeningchar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="850dp"
            android:ems="10"
            android:hint="@string/account_opening_char"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/lockingperiod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="900dp"
            android:ems="10"
            android:hint="@string/locking_period_in_months"
            android:inputType="number"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/clientage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="950dp"
            android:ems="10"
            android:hint="@string/client_age"
            android:inputType="number"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/Payback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1000dp"
            android:ems="10"
            android:hint="@string/payback_amount_words"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/dateformat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1060dp"
            android:text="@string/dateformat"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/daterec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1100dp"
            android:ems="10"
            android:hint="@string/date_of_amount_received"
            android:inputType="date"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/startingdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1150dp"
            android:ems="10"
            android:hint="@string/starting_date"
            android:importantForAutofill="no"
            android:inputType="date"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/endingdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1200dp"
            android:ems="10"
            android:hint="@string/ending_date"
            android:importantForAutofill="no"
            android:inputType="date"
            tools:ignore="LabelFor" />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>